Fixed tests and permissions.